# docs/marketplace/marketplace_swagger.json
@@ -526,6 +526,29 @@
                     }
                 }
             }
+        },
+        "/system-info": {
+            "get": {
+                "description": "Get system information",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "system"
+                ],
+                "summary": "Get system information",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/entity.SystemInfo"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -756,6 +779,14 @@
                 }
             }
         },
+        "entity.PayCPU": {
+            "type": "object",
+            "properties": {
+                "account": {
+                    "type": "string"
+                }
+            }
+        },
         "entity.Pool": {
             "type": "object",
             "properties": {
@@ -886,6 +917,17 @@
             "type": "object",
             "properties": {
                 "transaction_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.SystemInfo": {
+            "type": "object",
+            "properties": {
+                "pay_cpu": {
+                    "$ref": "#/definitions/entity.PayCPU"
+                },
+                "version": {
                     "type": "string"
                 }
             }
